runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_large_terminal.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
expression: output
---
"╭ Messages ────────────────────────────────────────────────────────────────────────╮┌MCP Servers───────────────────────┐"
"│ℹ Welcome to Agent in a Browser! Type /help for commands.                         ││● Local (sandbox) [5 tools]       │"
"│› List all files in the current directory                                         ││○ No remote servers               │"
"│⚙ Calling shell_eval...                                                           ││                                  │"
"│✓ shell_eval: total 24 -rw-r--r-- 1 user user  156 Jan 25 10:00 Cargo.toml -rw-r--│└──────────────────────────────────┘"
"│◆ The directory contains 3 items: Cargo.toml, README.md, and a src/ directory.    │┌Auxiliary─────────────────────────┐"
"│                                                                                  ││Tool output will appear here.     │"
"│                                                                                  ││                                  │"
"│                                                                                  ││Try running a command!            │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"│                                                                                  ││                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────╯│                                  │"
"╭ Agent ───────────────────────────────────────────────────────────────────────────╮│                                  │"
"│›                                                                                 ││                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────╯└──────────────────────────────────┘"
" AGENT  │ claude-sonnet-4 │ L:● R:○ │ ^C quit  /help                                                                    "
