runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_mcp_servers_panel_text.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
expression: output
---
"╭ Messages ──────────────────────────────────────────────────────────╮┌MCP Servers─────────────────┐"
"│ℹ Testing MCP panel display                                         ││● Local (sandbox) [15 tools]│"
"│                                                                    ││○ No remote servers         │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Auxiliary───────────────────┐"
"│                                                                    ││Tool output will appear     │"
"│                                                                    ││here.                       │"
"│                                                                    ││                            │"
"│                                                                    ││Try running a command!      │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"╰────────────────────────────────────────────────────────────────────╯│                            │"
"╭ Agent ─────────────────────────────────────────────────────────────╮│                            │"
"│›                                                                   ││                            │"
"╰────────────────────────────────────────────────────────────────────╯└────────────────────────────┘"
" AGENT  │ claude-sonnet-4 │ L:● R:○ │ ^C quit  /help                                                "
