runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_narrow_terminal.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
expression: output
---
"╭ Messages ────────────────────────────╮"
"│ℹ Welcome!                            │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
"╭ Agent ───────────────────────────────╮"
"│› hello                               │"
"╰──────────────────────────────────────╯"
" AGENT  │ claude-sonnet-4 │ L:● R:○ │ ^C"
