runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_needs_api_key_state.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
expression: output
---
"╭ Messages ──────────────────────────────────────────────────────────╮┌MCP Servers─────────────────┐"
"│ℹ Enter your API key:                                               ││● Local (sandbox) [5 tools] │"
"│                                                                    ││○ No remote servers         │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Auxiliary───────────────────┐"
"│                                                                    ││Tool output will appear     │"
"│                                                                    ││here.                       │"
"│                                                                    ││                            │"
"│                                                                    ││Try running a command!      │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"╰────────────────────────────────────────────────────────────────────╯│                            │"
"╔ API Key ═══════════════════════════════════════════════════════════╗│                            │"
"║* •••••••                                                           ║│                            │"
"╚════════════════════════════════════════════════════════════════════╝└────────────────────────────┘"
" AGENT  * KEY  │ claude-sonnet-4 │ L:● R:○ │ ^C quit  /help                                         "
