runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_overlay_provider_selector.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
assertion_line: 472
expression: output
---
"╭ Messages ──────────────────────────────────────────────────────────╮┌MCP Servers─────────────────┐"
"│ℹ Welcome                                                           ││● Local (sandbox) [5 tools] │"
"│                                                                    ││○ No remote servers         │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Auxiliary───────────────────┐"
"│                                                                    ││Tool output will appear     │"
"│                                                                    ││here.                       │"
"│                                                                    ││                            │"
"│                                                                    ││Try running a command!      │"
"│                        ╭⚙ Select Provider───────────────────────────────╮                        │"
"│                        │▶ Anthropic (Claude) (anthropic) (enter URL)    │                        │"
"│                        │  OpenAI (GPT) (openai) (enter URL)             │                        │"
"│                        │  Google (Gemini) (gemini) (enter URL)          │                        │"
"│                        │  Custom (OpenAI-compatible) (custom) (enter URL│                        │"
"│                        │                                                │                        │"
"│                        │                                                │                        │"
"│                        │                                                │                        │"
"│                        │                                                │                        │"
"│                        ╰────────────────────────────────────────────────╯                        │"
"│                              ↑↓ Navigate │ Enter Select │ Esc Close││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"╰────────────────────────────────────────────────────────────────────╯│                            │"
"╭ Agent ─────────────────────────────────────────────────────────────╮│                            │"
"│›                                                                   ││                            │"
"╰────────────────────────────────────────────────────────────────────╯└────────────────────────────┘"
" AGENT  │ claude-sonnet-4 │ L:● R:○ │ ^C quit  /help                                                "
