runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_overlay_provider_wizard_config_no_api_key.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
expression: output
---
"╭ Messages ──────────────────────────────────────────────────────────╮┌MCP Servers─────────────────┐"
"│                                                                    ││○ Local (sandbox) [0 tools] │"
"│                                                                    ││○ No remote servers         │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Auxiliary───────────────────┐"
"│                                                                    ││Tool output will appear     │"
"│                                                                    ││here.                       │"
"│                     ╭⚙️  Configure: Anthropic (Claude)────────────────────╮                      │" Hidden by multi-width symbols: [(24, " ")]
"│                     │▶ Model:    claude-haiku                             │nning a command!      │"
"│                     │  Base URL: (default)                                │                      │"
"│                     │  API Key:  ✗ not set                                │                      │"
"│                     │                                                     │                      │"
"│                     │  [Apply & Save]  set as default                     │                      │"
"│                     │  [Save]          keep settings                      │                      │"
"│                     │  [Back]                                             │                      │"
"│                     │                                                     │                      │"
"│                     │                                                     │                      │"
"│                     │                                                     │                      │"
"│                     │                                                     │                      │"
"│                     ╰─────────────────────────────────────────────────────╯                      │"
"│                           ↑↓ Navigate │ Enter Edit/Select │ Esc Close                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"╰────────────────────────────────────────────────────────────────────╯│                            │"
"╭ Agent ─────────────────────────────────────────────────────────────╮│                            │"
"│›                                                                   ││                            │"
"╰────────────────────────────────────────────────────────────────────╯└────────────────────────────┘"
" AGENT  │ test-model │ L:○ R:○ │ ^C quit  /help                                                     "
