runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_overlay_provider_wizard_edit_api_key_empty.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
expression: output
---
"╭ Messages ──────────────────────────────────────────────────────────╮┌MCP Servers─────────────────┐"
"│                                                                    ││○ Local (sandbox) [0 tools] │"
"│                                                                    ││○ No remote servers         │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Auxiliary───────────────────┐"
"│                                                                    ││Tool output will appear     │"
"│                                                                    ││here.                       │"
"│                                                                    ││                            │"
"│                                                                    ││Try running a command!      │"
"│                                                                    ││                            │"
"│                   ╭* Edit API Key────────────────────────────────────────────╮                   │"
"│                   │Enter API key for anthropic.                              │                   │"
"│                   │                                                          │                   │"
"│                   │╭────────────────────────────────────────────────────────╮│                   │"
"│                   ││▋                                                       ││                   │"
"│                   │╰────────────────────────────────────────────────────────╯│                   │"
"│                   ╰──────────────────────────────────────────────────────────╯                   │"
"│                                   Enter to save │ Esc to cancel    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"╰────────────────────────────────────────────────────────────────────╯│                            │"
"╭ Agent ─────────────────────────────────────────────────────────────╮│                            │"
"│›                                                                   ││                            │"
"╰────────────────────────────────────────────────────────────────────╯└────────────────────────────┘"
" AGENT  │ test-model │ L:○ R:○ │ ^C quit  /help                                                     "
