runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_overlay_provider_wizard_edit_model.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
expression: output
---
"╭ Messages ──────────────────────────────────────────────────────────╮┌MCP Servers─────────────────┐"
"│                                                                    ││○ Local (sandbox) [0 tools] │"
"│                                                                    ││○ No remote servers         │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Auxiliary───────────────────┐"
"│                                                                    ││Tool output will appear     │"
"│                     ╭🤖 anthropic Models──────────────────────────────────╮                      │" Hidden by multi-width symbols: [(24, " ")]
"│                     │▶ 🔄 [Refresh from API]                              │                      │" Hidden by multi-width symbols: [(26, " ")]
"│                     │  Claude Haiku 4.5 (Fast, Default) (claude-haiku-4-5-│nning a command!      │"
"│                     │  Claude Sonnet 4.5 (claude-sonnet-4-5-20250929)     │                      │"
"│                     │  Claude Opus 4.5 (Most Powerful) (claude-opus-4-5-20│                      │"
"│                     │  Claude Opus 4.1 (claude-opus-4-1-20250805)         │                      │"
"│                     │  Claude Sonnet 4 (claude-sonnet-4-20250522)         │                      │"
"│                     │  Claude 3.7 Sonnet (claude-3-7-sonnet-20250224)     │                      │"
"│                     │  ✏️  Custom: claude-sonnet-4                        │                      │" Hidden by multi-width symbols: [(26, " ")]
"│                     │                                                     │                      │"
"│                     │                                                     │                      │"
"│                     │                                                     │                      │"
"│                     │                                                     │                      │"
"│                     │                                                     │                      │"
"│                     ╰─────────────────────────────────────────────────────╯                      │"
"│                        ↑↓ Navigate │ r Refresh │ Enter Save │ Esc Cancel                         │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"╰────────────────────────────────────────────────────────────────────╯│                            │"
"╭ Agent ─────────────────────────────────────────────────────────────╮│                            │"
"│›                                                                   ││                            │"
"╰────────────────────────────────────────────────────────────────────╯└────────────────────────────┘"
" AGENT  │ test-model │ L:○ R:○ │ ^C quit  /help                                                     "
