runtime/crates/web-agent-tui/src/ui/snapshots/web_agent_tui__ui__tests__ui_overlay_server_manager.snap
---
source: runtime/crates/web-agent-tui/src/ui/mod.rs
expression: output
---
"╭ Messages ──────────────────────────────────────────────────────────╮┌MCP Servers─────────────────┐"
"│ℹ Welcome                                                           ││● Local (sandbox) [5 tools] │"
"│                                                                    ││○ No remote servers         │"
"│                                                                    ││                            │"
"│                   ╭◎ MCP Servers─────────────────────────────────────────────╮───────────────────┘"
"│                   │▶ ● ☐ Local (sandbox) [5 tools]                           │───────────────────┐"
"│                   │  + Add new server...                                     │ut will appear     │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │ng a command!      │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   ╰──────────────────────────────────────────────────────────╯                   │"
"╰──────────────────────────────↑↓ Navigate │ Enter Select │ Esc Close╯│                            │"
"╭ Agent ─────────────────────────────────────────────────────────────╮│                            │"
"│›                                                                   ││                            │"
"╰────────────────────────────────────────────────────────────────────╯└────────────────────────────┘"
" AGENT  │ claude-sonnet-4 │ L:● R:○ │ ^C quit  /help                                                "
